2007-04-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itfile.cpp: Fixed bug [1693384] caused by a missing
	explicit cast of string size to int

	* configure.ac, itpp.spec.in: Minor cleanups and improvements

	* AUTHORS, doc/local/authors.doc: Added Gunter Dannoritzer as
	openSUSE distribution packages maintainer

2007-04-01  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.h: Documentation updates

2007-03-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h: Fixed a small bug in the
	integrity_check() function. Some of the private data and methods
	made protected to allow access by the classes who might inherit
	from the LDPC_Code.

2007-03-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/gf2mat.cpp, itpp/base/gf2mat.h: Added set_size()
	method to the GF2mat class, which is compatible with Mat's
	set_size() function.

	* configure.ac: Version bump

==============================================================================
	
2007-03-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.1 released (SVN tag: release-3-99-1)

	* NEWS: Updated to reflect recent changes

	* doc/local/verification.doc: Added a new verification report for
	MSVC++ .NET and IT++ with ACML

2007-03-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.sln, win32/itpp_acml.vcproj, win32/itpp_mkl.sln,
	win32/itpp_mkl.vcproj, doc/local/installation.doc,
	doc/local/linking.doc, itpp/config_msvc.h, win32/itpp.sln,
	win32/itpp.vcproj, win32/Makefile.am: Added a new MSVC++ project
	file for linking IT++ with ACML (PGI build for Windows).
	Installation manual and "Linking with IT++" document updated to
	reflect these changes.

2007-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.cpp, itpp/base/random.h: Added
	rand53_01_lclosed() function for 53-bit resolution [0,1) random
	numbers generator. Global static initialization flag moved into