@@ -1,5 +1,8 @@
 2007-04-03  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/base/itassert.cpp: Fixed a compilation problem when IT++ is
+	configured with the "--enable-exceptions" switch
+
 	* itpp/base/itfile.cpp: Fixed bug [1693384] caused by a missing
 	explicit cast of string size to int
 
